# TikTok

./: LICENSE  README.md  pyproject.toml
src/: server.py
